Cleaned the project, modified gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,7 @@
 *~
 .*.swp
-INSTALL
-Makefile
-Makefile.in
-*/Makefile
-*/Makefile.in
-*/.deps/*
-src/gtextutils/.deps/
-src/gtextutils/.libs/
-src/gtextutils/*.o
-src/gtextutils/*.la
-src/gtextutils/*.lo
-tests/*.o
-tests/*.trs
-tests/*.log
 
-aclocal.m4
-autom4te.cache/*
-config.h
-config.h.in
-config.log
-config.status
-config/*
-configure
-gtextutils.pc
-libtool
-m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
-stamp-h1
-
-libgtextutils-*.tar.bz2
 libgtextutils-*.tar.gz
-
-tests/.libs
-
-tests/fdout.txt.gz
-tests/pipe_out.txt.gz
-
-tests/test_container_join
-tests/test_fd_inbuf
-tests/test_fd_outbuf
-tests/test_in_out_buf
-tests/test_input_stream_wrapper
-tests/test_natural_sort
-tests/test_pipe_fitter
-tests/test_string_tokenize
-tests/test_text_reader
-tests/test_text_reader_unget
 
 # any logs files
 
@@ -57,3 +9,10 @@ tests/test_text_reader_unget
 
 # Ignore build directory
 build/
+
+# ignore tests directory
+
+tests/
+
+# .DS_Store
+.DS_Store
